Added multi threading to alarm to have 2 function run at the same time

--- a/C++/RaspberryPi/Stepper/Makefile
+++ b/C++/RaspberryPi/Stepper/Makefile
@@ -4,7 +4,7 @@ SOURCE := Main.cpp
 
 
 all:
-	$(CC) -o myApp -lwiringPi -lwiringPiDev
+	$(CC) -o myApp -lwiringPi -lwiringPiDev -pthread
 
 debug:
 	$(DCC) -o myAppD
